--- a/packages/eslint-config-emperor/package.json
+++ b/packages/eslint-config-emperor/package.json
@@ -19,6 +19,20 @@
     "prettier.js",
     "style.js"
   ],
+  "release": {
+    "branches": [
+      "master",
+      "next",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
+    ]
+  },
   "dependencies": {
     "eslint-config-prettier": "^8.8.0"
   },
