--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,11 @@ on:
       - beta
       - next
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+
 jobs:
   validate:
     name: validate
@@ -47,7 +52,7 @@ jobs:
 
       - name: Release
         env:
-          GH_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           cd packages/eslint-config-emperor
