--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "@types/eslint": "^8.37.0",
     "prettier": "2.8.7",
     "table": "^6.8.1",
     "typescript": "5.0.2",
