--- a/packages/eslint-config-emperor/package.json
+++ b/packages/eslint-config-emperor/package.json
@@ -20,9 +20,10 @@
     "style.js"
   ],
   "dependencies": {
-    "eslint-config-prettier": "^8.8.0",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
