chore: generate docs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,29 +12,11 @@ permissions:
   contents: write
   issues: write
   pull-requests: write
+  id-token: write
 
 jobs:
-  validate:
-    name: validate
-    strategy:
-      matrix:
-        node: [16, 18]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-      - uses: pnpm/action-setup@v2
-        with:
-          run_install: true
-
-      - name: Test
-        run: pnpm test
-
   release:
     name: release
-    needs: [validate]
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'push' && github.event.repository.full_name == github.repository &&
@@ -46,9 +28,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
-      - uses: pnpm/action-setup@v2
-        with:
-          run_install: true
 
       - name: Release
         env:
