--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          persist-credentials: false
       - uses: actions/setup-node@v3
         with:
           node-version: 'lts/*'
+      - uses: pnpm/action-setup@v2
+        with:
+          run_install: true
 
       - name: Release
         env:
