--- a/packages/eslint-config-emperor/.releaserc
+++ b/packages/eslint-config-emperor/.releaserc
@@ -10,5 +10,28 @@
       "name": "alpha",
       "prerelease": true
     }
+  ],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/npm",
+    "@semantic-release/github",
+    [
+      "@semantic-release/exec",
+      {
+        "generateNotesCmd": "node ../../scripts/generate-changelog.js ${nextRelease.version}"
+      }
+    ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          "packages/eslint-config-emperor/.release-snapshot.json",
+          "packages/eslint-config-emperor/package.json",
+          "packages/eslint-config-emperor/docs/**/*.md"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]"
+      }
+    ]
   ]
 }
