--- a/website/package.json
+++ b/website/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@astrojs/preact": "^2.1.0",
     "@astrojs/react": "^2.1.3",
+    "@astrojs/tailwind": "^3.1.2",
     "astro": "^2.4.1",
     "preact": "^10.13.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "@types/html-escaper": "^3.0.0",
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
