--- a/.prettierignore
+++ b/.prettierignore
@@ -2,3 +2,4 @@ node_modules/
 pnpm-lock.yaml
 packages/eslint-config-emperor/docs/
 packages/eslint-config-emperor/.release-snapshot.json
+website/dist/
