chore: rework changelog generation

--- a/packages/eslint-config-emperor/.releaserc
+++ b/packages/eslint-config-emperor/.releaserc
@@ -19,7 +19,7 @@
     [
       "@semantic-release/exec",
       {
-        "generateNotesCmd": "node ../../scripts/generate-changelog.js ${nextRelease.version}"
+        "generateNotesCmd": "node ../../scripts/generate-changelog.cjs ${nextRelease.version}"
       }
     ],
     [
