--- a/packages/eslint-config-emperor/package.json
+++ b/packages/eslint-config-emperor/package.json
@@ -7,7 +7,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/kubajastrz/eslint-config-emperor",
+		"url": "https://github.com/kubajastrz/eslint-config-emperor",
 		"directory": "packages/eslint-config-emperor"
 	},
 	"license": "MIT",
