--- a/packages/eslint-config-emperor/.releaserc
+++ b/packages/eslint-config-emperor/.releaserc
@@ -1,37 +1,36 @@
 {
-  "branches": [
-    "main",
-    "next",
-    {
-      "name": "beta",
-      "prerelease": true
-    },
-    {
-      "name": "alpha",
-      "prerelease": true
-    }
-  ],
-  "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/npm",
-    "@semantic-release/github",
-    [
-      "@semantic-release/exec",
-      {
-        "generateNotesCmd": "node ../../scripts/generate-changelog.cjs ${nextRelease.version}"
-      }
-    ],
-    [
-      "@semantic-release/git",
-      {
-        "assets": [
-          "packages/eslint-config-emperor/.release-snapshot.json",
-          "packages/eslint-config-emperor/package.json",
-          "packages/eslint-config-emperor/docs/**/*.md"
-        ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]"
-      }
-    ]
-  ]
+	"branches": [
+		"main",
+		"next",
+		{
+			"name": "beta",
+			"prerelease": true
+		},
+		{
+			"name": "alpha",
+			"prerelease": true
+		}
+	],
+	"plugins": [
+		"@semantic-release/commit-analyzer",
+		"@semantic-release/release-notes-generator",
+		"@semantic-release/npm",
+		"@semantic-release/github",
+		[
+			"@semantic-release/exec",
+			{
+				"generateNotesCmd": "node ../../scripts/generate-changelog.cjs ${nextRelease.version}"
+			}
+		],
+		[
+			"@semantic-release/git",
+			{
+				"assets": [
+					"packages/eslint-config-emperor/.release-snapshot.json",
+					"packages/eslint-config-emperor/package.json"
+				],
+				"message": "chore(release): ${nextRelease.version} [skip ci]"
+			}
+		]
+	]
 }
