chore: fix npm root

--- a/packages/eslint-config-emperor/.releaserc
+++ b/packages/eslint-config-emperor/.releaserc
@@ -14,8 +14,12 @@
 	"plugins": [
 		"@semantic-release/commit-analyzer",
 		"@semantic-release/release-notes-generator",
-		"@semantic-release/npm",
-		"@semantic-release/github",
+		[
+			"@semantic-release/npm",
+			{
+				"pkgRoot": "packages/eslint-config-emperor"
+			}
+		],
 		[
 			"@semantic-release/exec",
 			{
@@ -31,6 +35,7 @@
 				],
 				"message": "chore(release): ${nextRelease.version} [skip ci]"
 			}
-		]
+		],
+		"@semantic-release/github"
 	]
 }
