--- a/packages/eslint-config-emperor/.release-snapshot.json
+++ b/packages/eslint-config-emperor/.release-snapshot.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.2",
+  "version": "1.4.0",
   "presets": [
     {
       "label": "base (js)",
@@ -17,13 +17,13 @@
           "import/default": [
             "error"
           ],
+          "import/export": [
+            "error"
+          ],
           "import/named": [
             "error"
           ],
           "import/namespace": [
-            "error"
-          ],
-          "import/export": [
             "error"
           ],
           "import/newline-after-import": [
@@ -64,9 +64,6 @@
             {
               "noUselessIndex": true
             }
-          ],
-          "unicorn/prefer-export-from": [
-            "error"
           ],
           "array-callback-return": [
             "error"
@@ -245,12 +242,14 @@
           "import"
         ],
         "rules": {
-          "@typescript-eslint/consistent-type-imports": [
-            "error",
-            {
-              "prefer": "type-imports",
-              "fixStyle": "inline-type-imports"
-            }
+          "import/default": [
+            "off"
+          ],
+          "import/named": [
+            "off"
+          ],
+          "import/namespace": [
+            "off"
           ],
           "import/export": [
             "error"
@@ -294,9 +293,6 @@
               "noUselessIndex": true
             }
           ],
-          "unicorn/prefer-export-from": [
-            "error"
-          ],
           "no-undef": [
             "off"
           ],
@@ -316,6 +312,9 @@
             "error"
           ],
           "@typescript-eslint/no-namespace": [
+            "error"
+          ],
+          "@typescript-eslint/no-unnecessary-condition": [
             "error"
           ],
           "@typescript-eslint/no-unnecessary-type-constraint": [
@@ -585,6 +584,12 @@
           "no-unused-expressions": [
             "error"
           ],
+          "no-unused-vars": [
+            "error"
+          ],
+          "no-use-before-define": [
+            "error"
+          ],
           "no-useless-backreference": [
             "error"
           ],
@@ -645,6 +650,9 @@
             "error"
           ],
           "unicorn/no-useless-switch-case": [
+            "error"
+          ],
+          "unicorn/prefer-export-from": [
             "error"
           ],
           "unicorn/prefer-prototype-methods": [
@@ -688,6 +696,13 @@
           "@typescript-eslint/consistent-type-exports": [
             "error"
           ],
+          "@typescript-eslint/consistent-type-imports": [
+            "error",
+            {
+              "prefer": "type-imports",
+              "fixStyle": "inline-type-imports"
+            }
+          ],
           "@typescript-eslint/no-duplicate-type-constituents": [
             "error"
           ],
@@ -704,6 +719,9 @@
             "error"
           ],
           "@typescript-eslint/no-redundant-type-constituents": [
+            "error"
+          ],
+          "@typescript-eslint/no-unnecessary-type-arguments": [
             "error"
           ],
           "@typescript-eslint/no-unnecessary-type-assertion": [
@@ -724,6 +742,26 @@
           "@typescript-eslint/prefer-ts-expect-error": [
             "error"
           ],
+          "no-empty-function": [
+            "off",
+            {
+              "allow": [
+                "constructors",
+                "methods",
+                "asyncMethods"
+              ]
+            }
+          ],
+          "@typescript-eslint/no-empty-function": [
+            "error",
+            {
+              "allow": [
+                "constructors",
+                "methods",
+                "asyncMethods"
+              ]
+            }
+          ],
           "no-implied-eval": [
             "off"
           ],
@@ -736,6 +774,24 @@
           "@typescript-eslint/no-throw-literal": [
             "error"
           ],
+          "no-unused-expressions": [
+            "off"
+          ],
+          "@typescript-eslint/no-unused-expressions": [
+            "error"
+          ],
+          "no-unused-vars": [
+            "off"
+          ],
+          "@typescript-eslint/no-unused-vars": [
+            "error"
+          ],
+          "no-use-before-define": [
+            "off"
+          ],
+          "@typescript-eslint/no-use-before-define": [
+            "error"
+          ],
           "no-debugger": [
             "error"
           ],
@@ -744,16 +800,6 @@
           ],
           "no-empty-character-class": [
             "error"
-          ],
-          "no-empty-function": [
-            "error",
-            {
-              "allow": [
-                "constructors",
-                "methods",
-                "asyncMethods"
-              ]
-            }
           ],
           "no-empty-pattern": [
             "error"
@@ -789,9 +835,6 @@
             "error"
           ],
           "no-sequences": [
-            "error"
-          ],
-          "no-unused-expressions": [
             "error"
           ],
           "no-useless-backreference": [
@@ -854,6 +897,9 @@
             "error"
           ],
           "unicorn/no-useless-switch-case": [
+            "error"
+          ],
+          "unicorn/prefer-export-from": [
             "error"
           ],
           "unicorn/prefer-prototype-methods": [
@@ -1212,13 +1258,13 @@
           "import/default": [
             "error"
           ],
+          "import/export": [
+            "error"
+          ],
           "import/named": [
             "error"
           ],
           "import/namespace": [
-            "error"
-          ],
-          "import/export": [
             "error"
           ],
           "import/newline-after-import": [
@@ -1259,9 +1305,6 @@
             {
               "noUselessIndex": true
             }
-          ],
-          "unicorn/prefer-export-from": [
-            "error"
           ],
           "array-callback-return": [
             "error"
@@ -1770,12 +1813,14 @@
           "jsx-a11y/tabindex-no-positive": [
             "error"
           ],
-          "@typescript-eslint/consistent-type-imports": [
-            "error",
-            {
-              "prefer": "type-imports",
-              "fixStyle": "inline-type-imports"
-            }
+          "import/default": [
+            "off"
+          ],
+          "import/named": [
+            "off"
+          ],
+          "import/namespace": [
+            "off"
           ],
           "import/export": [
             "error"
@@ -1819,9 +1864,6 @@
               "noUselessIndex": true
             }
           ],
-          "unicorn/prefer-export-from": [
-            "error"
-          ],
           "no-undef": [
             "off"
           ],
@@ -1841,6 +1883,9 @@
             "error"
           ],
           "@typescript-eslint/no-namespace": [
+            "error"
+          ],
+          "@typescript-eslint/no-unnecessary-condition": [
             "error"
           ],
           "@typescript-eslint/no-unnecessary-type-constraint": [
@@ -2126,6 +2171,12 @@
           "no-unused-expressions": [
             "error"
           ],
+          "no-unused-vars": [
+            "error"
+          ],
+          "no-use-before-define": [
+            "error"
+          ],
           "no-useless-backreference": [
             "error"
           ],
@@ -2186,6 +2237,9 @@
             "error"
           ],
           "unicorn/no-useless-switch-case": [
+            "error"
+          ],
+          "unicorn/prefer-export-from": [
             "error"
           ],
           "unicorn/prefer-prototype-methods": [
@@ -2241,6 +2295,13 @@
           "@typescript-eslint/consistent-type-exports": [
             "error"
           ],
+          "@typescript-eslint/consistent-type-imports": [
+            "error",
+            {
+              "prefer": "type-imports",
+              "fixStyle": "inline-type-imports"
+            }
+          ],
           "@typescript-eslint/no-duplicate-type-constituents": [
             "error"
           ],
@@ -2257,6 +2318,9 @@
             "error"
           ],
           "@typescript-eslint/no-redundant-type-constituents": [
+            "error"
+          ],
+          "@typescript-eslint/no-unnecessary-type-arguments": [
             "error"
           ],
           "@typescript-eslint/no-unnecessary-type-assertion": [
@@ -2277,6 +2341,26 @@
           "@typescript-eslint/prefer-ts-expect-error": [
             "error"
           ],
+          "no-empty-function": [
+            "off",
+            {
+              "allow": [
+                "constructors",
+                "methods",
+                "asyncMethods"
+              ]
+            }
+          ],
+          "@typescript-eslint/no-empty-function": [
+            "error",
+            {
+              "allow": [
+                "constructors",
+                "methods",
+                "asyncMethods"
+              ]
+            }
+          ],
           "no-implied-eval": [
             "off"
           ],
@@ -2289,6 +2373,24 @@
           "@typescript-eslint/no-throw-literal": [
             "error"
           ],
+          "no-unused-expressions": [
+            "off"
+          ],
+          "@typescript-eslint/no-unused-expressions": [
+            "error"
+          ],
+          "no-unused-vars": [
+            "off"
+          ],
+          "@typescript-eslint/no-unused-vars": [
+            "error"
+          ],
+          "no-use-before-define": [
+            "off"
+          ],
+          "@typescript-eslint/no-use-before-define": [
+            "error"
+          ],
           "no-debugger": [
             "error"
           ],
@@ -2297,16 +2399,6 @@
           ],
           "no-empty-character-class": [
             "error"
-          ],
-          "no-empty-function": [
-            "error",
-            {
-              "allow": [
-                "constructors",
-                "methods",
-                "asyncMethods"
-              ]
-            }
           ],
           "no-empty-pattern": [
             "error"
@@ -2342,9 +2434,6 @@
             "error"
           ],
           "no-sequences": [
-            "error"
-          ],
-          "no-unused-expressions": [
             "error"
           ],
           "no-useless-backreference": [
@@ -2407,6 +2496,9 @@
             "error"
           ],
           "unicorn/no-useless-switch-case": [
+            "error"
+          ],
+          "unicorn/prefer-export-from": [
             "error"
           ],
           "unicorn/prefer-prototype-methods": [
